----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-01-25 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_row_delete.php: bug 882695, broken row highlighting
    * libraries/display_tbl.lib.php: bug 879792, bad sort link

2004-01-24 Marc Delisle  <lem9@users.sourceforge.net>
    * querywindow.php: PMA_DBI_close() instead of DBI_close()
    * Documentation.html: clarify FAQ 6.21
    * libraries/dbi/*: use generic $strCantLoad message
    * lang/*: remove $strCantLoadMySQL message
    * libraries/dbi/mysqli.dbi.lib.php: @ before connect to avoid the
      display of unwanted error messages
    * libraries/relation.lib.php: PMA_DBI_fetch_row() instead of fetch_assoc()

2004-01-23 Alexander M. Turek  <foreveryoung@derrabus.de>
    * header_printview.inc.php:
      - Don't bypass $cfg['Server']['verbose'] settings;
      - Include MySQL version in SQL printview headers.
    * header.inc.php: Avoid sending headers twice.

2004-01-22 Alexander M. Turek  <innocenteyes@derrabus.de>
    * libraries/dbi/mysqli.dbi.lib.php: Experimental new MySQLi library.
    * browse_foreigners.php, db_create.php, db_datadict.php,
      db_details_common.php, db_details_db_info.php, db_details_qbe.php,
      db_details_structure.php, db_printview.php, export.php, ldi_table.php,
      left.php, main.php, mult_submits.php, pdf_pages.php, pdf_schema.php,
      querywindow.php, read_dump.php, server_common.inc.php,
      server_privileges.php, server_processlist.php, server_status.php,
      server_variables.php, sql.php, tbl_addfield.php, tbl_alter.php,
      tbl_change.php, tbl_create.php, tbl_index.php, tbl_move_copy.php,
      tbl_printview.php, tbl_properties.inc.php, tbl_properties_operations.php,
      tbl_properties_table_info.php, tbl_query_box.php, tbl_relation.php,
      tbl_rename.php, tbl_replace.php, tbl_select.php,
      transformation_wrapper.php, user_password.php, libraries/bookmark.lib.php,